# pptx-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI-MANIFEST.md  CONTRIBUTING.md  PRD.md  PREVIEW-FUTURE.md  PROJECT.md  README.md  SCAFFOLD.md  SECURITY.md  TESTING.md  Template.pptx  guardrails-explorer.html  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: backend.instructions.md  testing.instructions.md
.github/skills/pptx/: SKILL.md
.github/skills/pptx-deck-builder/: SKILL.md
.github/skills/pptx-deck-builder/references/: excal-diagrams.md  mckinsey-style.md  pptx-workflow.md
.github/skills/pptx/references/: deck-spec.md
.github/workflows/: ci.yml  publish.yml
DECISIONS/: ADR-0001-initial-architecture.md
docs/: DOMAIN.md  GLOSSARY.md  ROADMAP.md  SCAFFOLDING-NOTES.md
guardrails/: .gitignore  guardrails.jsonl  links.jsonl  references.jsonl  taxonomy.json
scripts/: bump_version.py
src/pptx_cli/: __init__.py  cli.py
src/pptx_cli/commands/: compose.py  guide.py  init.py  inspect.py  manifest_ops.py  schema.py  validate.py  wrapper.py
src/pptx_cli/core/: composition.py  ids.py  io.py  manifest_store.py  markdown.py  runtime.py  template.py  validation.py  versioning.py
src/pptx_cli/models/: __init__.py  envelope.py  manifest.py
tests/: conftest.py  test_cli.py  test_schema.py  test_versioning.py
